Fixes #1
CSS updated to behave properly when expanding menus and Firefox no longer overlaps.

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
+    z-index: 100;
 }
  
     header > div#title {
@@ -76,6 +77,7 @@ header {
         display: none;
         flex: 1;
         transform: 300ms all ease;
+        z-index: 75;
     }
      
         header nav > ul {
@@ -321,7 +323,7 @@ div#primary > div.tool {
         overflow-y: auto;
         position: fixed;
         bottom: 60px;
-        top: 160px;
+        top: 180px;
         width: 100%;
         margin: 0 auto;
     }
